--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "not < 0.25%"
   ],
   "scripts": {
+    "start": "webpack serve --mode development --open",
     "lint": "eslint src/",
-    "build": "webpack --mode production",
-    "start": "webpack serve --mode development --open"
+    "build": "webpack --mode production"
   },
   "devDependencies": {
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "babel-loader": "8.2.4",
+    "copy-webpack-plugin": "10.2.4",
     "eslint": "8.13.0",
     "eslint-config-htmlacademy": "5.1.2",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
-    "copy-webpack-plugin": "10.2.4",
-    "webpack-dev-server": "4.8.1",
-    "@babel/core": "7.17.9",
-    "babel/present-env": "7.16.11",
-    "babel-loader": "8.2.4"
+    "webpack-dev-server": "4.8.1"
   },
   "engines": {
     "node": "16"
+  },
+  "dependencies": {
+    "connect": "^3.7.0",
+    "serve-static": "^1.15.0"
   }
 }
